--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^136.0.0",
     "http": "^0.0.1-security",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.9"
   },
   "name": "production",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   }
 }
