--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "googleapis": "^136.0.0",
     "http": "^0.0.1-security",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "potrace": "^2.1.8"
   },
   "name": "production",
   "version": "1.0.0",
